# Cantor

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
inc/: divisor.hpp  extended_mumford.hpp  extended_mumford_projective.hpp  extended_number.hpp  extended_polynomial.hpp  mumford.hpp  mumford_projective.hpp  mumford_weighted_projective.hpp  number.hpp  point.hpp  polynomial.hpp
src/: divisor.cpp  extended_mumford.cpp  extended_mumford_projective.cpp  extended_number.cpp  extended_polynomial.cpp  main.cpp  mumford.cpp  mumford_projective.cpp  mumford_weighted_projective.cpp  number.cpp  point.cpp  polynomial.cpp
tests/: extended_number_test.cpp  mumford_projective_test.cpp  mumford_test.cpp  mumford_weighted_projective_test.cpp  number_test.cpp  polynomial_test.cpp
tools/Transfielder/: trans_add.php  trans_mul.php  trans_neg.php  trans_sub.php
